# displacedCamp

./: .gitignore  PROJECT_MAP.md  pyproject.toml
app/: admin.py  logging.py  main.py  seed.py
app/api/v1/endpoints/: families.py
app/core/: config.py
app/models/: family.py  update_request.py  user.py
app/portals/: blockhead_portal.py  common.py  family_portal.py  manager_portal.py  router.py
app/schemas/: family.py  update_request.py  user.py
app/services/: block_head_service.py  family_service.py  update_request_service.py  user_service.py
app/static/: style.css
templates/portals/: base.html  blockhead_dashboard.html  family_dashboard.html  login.html  manager_block_heads.html  manager_dashboard.html  manager_family_detail.html  manager_family_form.html  manager_member_form.html  manager_requests.html
tests/: conftest.py  test_block_head_service.py  test_family_service.py  test_update_request_service.py  test_user_service.py
